--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+ame: CI/CD Pipeline
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [ "master" ]
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -23,45 +23,20 @@ jobs:
     - name: Build Frontend  
       run: docker build -f Dockerfile.frontend -t style-transfer-frontend .
 
-  test:
-    runs-on: ubuntu-latest
-    needs: build
-
-    # Запускаем реальные контейнеры (как в production!)
-    services:
-      backend:
-        image: style-transfer-backend
-        ports:
-          - 8000:8000
-        options: >-
-          --health-cmd="curl -f http://localhost:8000/docs || exit 1"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
-
-      frontend:
-        image: style-transfer-frontend
-        ports:
-          - 80:80
-        options: >-
-          --health-cmd="curl -f http://localhost || exit 1"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
     - name: Install curl for testing
       run: sudo apt-get update && sudo apt-get install -y curl
+
+    - name: Run services in background
+      run: |
+        docker run -d --name backend -p 8000:8000 style-transfer-backend
+        docker run -d --name frontend -p 80:80 style-transfer-frontend
 
     - name: Wait for services to be ready
       run: |
         echo "Waiting for backend (http://localhost:8000/docs)..."
         for i in {1..30}; do
           if curl -f http://localhost:8000/docs > /dev/null 2>&1; then
-            echo "Backend is ready!"
+            echo "✅ Backend is ready!"
             break
           fi
           sleep 5
@@ -70,7 +45,7 @@ jobs:
         echo "Waiting for frontend (http://localhost)..."
         for i in {1..30}; do
           if curl -f http://localhost > /dev/null 2>&1; then
-            echo "Frontend is ready!"
+            echo "✅ Frontend is ready!"
             break
           fi
           sleep 5
@@ -78,7 +53,7 @@ jobs:
 
     - name: Test API endpoint
       run: |
-        echo "Testing /transfer endpoint (should return 422, not 500)..."
+        echo "Testing /transfer endpoint..."
         response=$(curl -X POST http://localhost:8000/transfer -w "%{http_code}" -o /dev/null -s)
         if [[ $response == "422" || $response == "400" ]]; then
           echo "✅ API correctly rejects invalid requests"
@@ -92,10 +67,16 @@ jobs:
         echo "Testing frontend..."
         curl -f http://localhost | grep -q "<title>Style Transfer</title>" && echo "✅ Frontend works"
 
+    - name: Clean up containers
+      if: always()
+      run: |
+        docker stop backend frontend
+        docker rm backend frontend
+
   deploy:
     runs-on: ubuntu-latest
-    needs: test
-    if: github.ref == 'refs/heads/main'
+    needs: build-and-test
+    if: github.ref == 'refs/heads/master'
 
     steps:
     - name: Checkout code
